--- a/app/views/configurators/angular_views/_contracts.html
+++ b/app/views/configurators/angular_views/_contracts.html
@@ -144,7 +144,7 @@
                                         <label class="input-group-btn">
                                             <span class="btn btn-primary">
                                                 Choose File&hellip; <input type="file" style="display: none;"
-                                                    accept=".csv, text/csv, .xls, .xlsx" id="file" name='file'
+                                                    accept=".xls, .xlsx" id="file" name='file'
                                                     onchange="angular.element(this).scope().fileNameChanged(this)">
                                             </span>
                                         </label>
@@ -225,7 +225,7 @@
                                         <label class="input-group-btn">
                                             <span class="btn btn-primary">
                                                 Choose File&hellip; <input type="file" style="display: none;"
-                                                accept=".csv, text/csv, .xls, .xlsx" id="file" name='file'
+                                                accept=".xls, .xlsx" id="file" name='file'
                                                     onchange="angular.element(this).scope().fileNameChanged(this)">
                                             </span>
                                         </label>
