--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -168,13 +168,13 @@
                     <!-- <button ng-if="roster.result!=='REQUIRED MORE VEHICLE' && !roster.routesGenerated" ng-click="generateRoutes(roster)"
                       type="button" class="btn btn-sm-vaayu btn-terniary-blue btn-block">Generate</button> -->
                     
-                    <button ng-if="roster.result=='REQUIRED MORE VEHICLE'" ng-click="addVehicleToRoster(roster)"
-                      type="button" class="btn btn-sm-vaayu btn-terniary btn-block">Add Vehicle</button>
+                    <!-- <button ng-if="roster.result=='REQUIRED MORE VEHICLE'" ng-click="addVehicleToRoster(roster)"
+                      type="button" class="btn btn-sm-vaayu btn-terniary btn-block">Add Vehicle</button> -->
 
-                  <!-- <button ng-if="roster.result=='REQUIRED MORE VEHICLE' && !roster.disableGenerate" ng-click="addVehicleToRoster(roster)"
+                  <button ng-if="roster.result=='REQUIRED MORE VEHICLE' && !roster.disableGenerate" ng-click="addVehicleToRoster(roster)"
                       type="button" class="btn btn-sm-vaayu btn-terniary btn-block">Add Vehicle</button>
                     <button ng-if="roster.result=='REQUIRED MORE VEHICLE' && roster.disableGenerate" 
-                      type="button" class="btn btn-sm-vaayu btn-terniary-disable btn-block">Add Vehicle</button> -->
+                      type="button" class="btn btn-sm-vaayu btn-terniary-disable btn-block">Add Vehicle</button>
                   </div>
                 </td>
               </tr>
