--- a/app/views/configurators/angular_views/_contracts.html
+++ b/app/views/configurators/angular_views/_contracts.html
@@ -272,7 +272,7 @@
                     </thead>
                     <tbody class="pop-table-body">
                         <tr class="active" ng-repeat="contract in contractList track by $index">
-                            <td>{{contract.customerId}}</td>
+                            <td>{{contract.customer_name}}</td>
                             <td>{{contract.siteName.toUpperCase()}}</td>
                             <td>
                                 <div class="contractListMenu">
@@ -302,7 +302,7 @@
                     <tbody class="pop-table-body">
                         <tr class="active" ng-repeat="contract in bacontractList track by $index">
                             <!-- <td>{{contract.customerId}}</td> -->
-                            <td>{{getSelectedBA()}}</td>
+                            <td>{{contract.ba_name}}</td>
                             <td>
                                 <div class="contractListMenu">
                                     <a ng-repeat="uid in contract.uniqueId.split('|')">{{uid}} </a>
