constraint, sites and guard changes

--- a/app/views/sites/_form.html.slim
+++ b/app/views/sites/_form.html.slim
@@ -75,7 +75,7 @@ div#site_html
           .col-md-4.no-margin
             label.site_labels for="phone_1"
               | Phone 1*
-            input#phone_1[class="form-control" type="number" name="phone_1" value="" required="true"]
+            input#phone_1[class="form-control" type="text" name="phone_1" value="" required="true"]
           .col-md-4.no-margin
             label.site_labels for="phone_2"
               | Phone 2
