--- a/app/views/configurators/angular_views/_constraint.html
+++ b/app/views/configurators/angular_views/_constraint.html
@@ -40,6 +40,7 @@
                     <div class="row mb-2 ">
                         <div class="col-md-4 ">
 
+                            
                             <label class="radio-inline mb-0 mr-2">
                                 <input type="radio" name="radioWhen" class="mr-2" ng-model="when" checked value='first'
                                     required>First
@@ -94,10 +95,12 @@
 
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="usr" class="leb_color">FROM:</label>
-
-                                    <input type="number" class="form-control" id="appt" min="0" max="23"
-                                        ng-model="from_time" name='from_time' required>
+                                    <label for="usr" class="leb_color">FROM TIME:</label>
+                                    <timepicker ng-model="from_time" 
+                                     name='from_time'
+                                    show-meridian="ismeridian" required></timepicker>
+                                    <!-- <input type="number" class="form-control" id="appt" min="0" max="23"
+                                        ng-model="from_time" name='from_time' required> -->
                                     <span ng-show="hasError('from_time', 'required')" class="help-block">From Time is
                                         required.</span>
                                 </div>
@@ -105,10 +108,12 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="usr" class="leb_color">TO:</label>
-
-                                    <input type="number" class="form-control" id="appt" min="0" max="23"
-                                        ng-model="to_time" name='to_time' required>
+                                    <label for="usr" class="leb_color">TO TIME:</label>
+                                    <timepicker 
+                                        ng-model="to_time" name='to_time'
+                                     show-meridian="ismeridian" required></timepicker>
+                                    <!-- <input type="number" class="form-control" id="appt" min="0" max="23"
+                                        ng-model="to_time" name='to_time' required> -->
                                     <span ng-show="hasError('to_time', 'required')" class="help-block">To Time is
                                         required.</span>
                                 </div>
@@ -231,23 +236,23 @@
 
                         <div class="col-md-6">
                             <div class="input-group mb-3">
-                                <label class="text-label" for="basic-url">Max Trip Time*</label>
+                                <label class="text-label" for="basic-url">Max Trip Time (Min)*</label>
                                 <input type="number" class="form-control" name='max_trip_time' ng-model='$parent.max_trip_time'
                                     required>
-                                <div class="input-group-append">
+                                <!-- <div class="input-group-append">
                                     <span class="input-group-text">Min</span>
-                                </div>
+                                </div> -->
                                 <span ng-show="hasError('max_trip_time', 'required')" class="help-block">
                                     Field is required.</span>
                             </div>
                         </div>
                         <div class="col-md-6" style="display: none;">
                             <div class="input-group mb-3">
-                                <label class="text-label" for="basic-url">Between Two Points</label>
+                                <label class="text-label" for="basic-url">Between Two Points (Min)</label>
                                 <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)">
-                                <div class="input-group-append">
+                                <!-- <div class="input-group-append">
                                     <span class="input-group-text">Min</span>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -282,23 +287,23 @@
                              </div> -->
                         <div class="col-md-6">
                             <div class="input-group mb-3">
-                                <label class="text-label" for="basic-url">Max Trip Distance *</label>
+                                <label class="text-label" for="basic-url">Max Trip Distance (Km)*</label>
                                 <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)"
                                     name='distance' ng-model='$parent.distance' required>
-                                <div class="input-group-append">
+                                <!-- <div class="input-group-append">
                                     <span class="input-group-text">Km</span>
-                                </div>
+                                </div> -->
                             </div>
                             <span ng-show="hasError('distance', 'required')" class="help-block">
                                 Field is required.</span>
                         </div>
                         <div class="col-md-6" style="display: none;">
                             <div class="input-group mb-3">
-                                <label class="text-label" for="basic-url">Between Two Points</label>
+                                <label class="text-label" for="basic-url">Between Two Points (Km)</label>
                                 <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-                                <div class="input-group-append">
+                                <!-- <div class="input-group-append">
                                     <span class="input-group-text">Km</span>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
