--- a/app/views/provisioning/_drivers.html.slim
+++ b/app/views/provisioning/_drivers.html.slim
@@ -31,7 +31,13 @@
           th
             | Compliance status
           th
+            | Primary Site
+          th
+            | Shift
+          th
             | Blacklisted
+          th
+            | Active
       tbody
 
 #checklist-modal
