contracts error on submission is hidden

--- a/app/views/configurators/angular_views/_contracts.html
+++ b/app/views/configurators/angular_views/_contracts.html
@@ -164,9 +164,9 @@
                                     </div>
                                 </div> -->
                             </div>
-                            <p class="submitMsg" ng-class="{error:!submitResponse.success}">
+                            <!-- <p class="submitMsg" ng-class="{error:!submitResponse.success}">
                                 {{submitResponse.message}}
-                            </p>
+                            </p> -->
                             <button href="#" ng-click="createContract()"
                                 class="btn btn-primary main-submit-btn">Submit</button>
                         </div>
@@ -245,9 +245,9 @@
 
                                 </div> -->
                             </div>
-                            <p class="submitMsg" ng-class="{error:!submitResponse.success}">
+                            <!-- <p class="submitMsg" ng-class="{error:!submitResponse.success}">
                                 {{submitResponse.message}}
-                            </p>
+                            </p> -->
                             <button href="#" ng-click="createContract()"
                                 class="btn btn-primary main-submit-btn">Submit</button>
                         </div>
