--- a/app/views/shifts/_form.html.slim
+++ b/app/views/shifts/_form.html.slim
@@ -3,9 +3,11 @@
       .col-md-3
         = f.input :name, required: true
       .col-md-3
+        /!= f.association :site, label_method: :site_name, value_method: :id, prompt: false, required: true, prompt: "Choose a Site"
+        = f.input :site_id, collection: @site, label: "Site", prompt: "Choose a Site"
+      .col-md-3
+        = f.input :working_day, label: 'Weedkday/Weekend', required: true, prompt: false, collection: [['Weedkday', "weedkday"], ['Weekend', "weekend"]], prompt: "Choose Day"
+      .col-md-3
         = f.input :start_time, required: true, input_html: {:'data-mask' => 'time'}
       .col-md-3
         = f.input :end_time, required: true, input_html: {:'data-mask' => 'time'}
-      .col-md-3
-        /!= f.association :site, label_method: :site_name, value_method: :id, prompt: false, required: true, prompt: "Choose a Site"
-        = f.input :site_id, collection: @site, label: "Site", prompt: "Choose a Site"
