removed link from employee name in employee search list - reported by Ekta

--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -423,7 +423,7 @@
                 </thead>
                 <tbody class="pop-table-body">
                   <tr class="active" ng-repeat="item in roster_employees track by $index">
-                    <td><a href="">{{item.empName}}</a></td>
+                    <td><span style="color:#49A49C;">{{item.empName}}</span></td>
                     <td>{{item.gender}}</td>
                     <td>{{item.home_address}}</td>
                     <td>{{item.lat}}</td>
