--- a/app/views/configurators/angular_views/_add_zone.html
+++ b/app/views/configurators/angular_views/_add_zone.html
@@ -54,7 +54,7 @@
                         <input type="text" class="form-control" name="zipcode" required ng-model="zipcode"
                         
                         onKeyPress="setInputFilter(this, function(value) {return /^([0-9]*,*)*$/.test(value);});"
-                            pattern="[0-9]{6}" onKeyPress="">
+                           >
                         
                         <span ng-show="hasError('zipcode', 'required')" class="help-block">Zipcode
                             is required.</span>
@@ -64,7 +64,7 @@
 
 
                 <div class="col-md-12 "><button type="submit" class="btn btn-primary main-submit-btn"
-                        ng-click="submitZone(form.$valid)">Submit</button></div>
+                        ng-click="submitZone(form)">Submit</button></div>
 
             </div>
 
