Fixed the new changes for site and customer

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -895,6 +895,8 @@
     .card_flex h5{font-size: 16px;font-weight: 600;padding-left: 7px;}
     .edit-buttons{float: right;}
     .siteFieldsHide{display: none;}
+    .row .vehicle-div {display: none;}
+    .operator {display: none;}
     .ml_selec{width:100% !important;}
     .ml_selec > .multiselect-parent{width: 100% !important;}
     .ml_selec > .multiselect-parent > .dropdown-toggle{width:100%;text-align: left;}
