--- a/app/views/configurators/angular_views/_constraint.html
+++ b/app/views/configurators/angular_views/_constraint.html
@@ -49,6 +49,10 @@
                                 <input type="radio" name="radioWhen" class="mr-2" " 
                                      ng-model=" when" value='last' required>Last
                             </label>
+                            <label class="radio-inline  mb-0 mr-2">
+                                <input type="radio" name="radioWhen" class="mr-2" " 
+                                     ng-model=" when" value='anywhere' required>Anywhere
+                            </label>
                             <span ng-show="hasError('radioWhen', 'required')" class="help-block">
                                 Field is required.</span>
                         </div>
