Business Associate Changes UI

--- a/app/views/business_associates/_form.html.slim
+++ b/app/views/business_associates/_form.html.slim
@@ -7,15 +7,13 @@
       = f.input :pan, label: 'Pan'
     .col-md-15-3
       = f.input :contact_person, label: 'Contact Person'
-    .col-md-15-3
-      = f.input :cin_no, label: 'Cin No'
   .row
     .col-md-15-3.col-md-15-offset-3
       = f.input :admin_email, label: 'Email'
     .col-md-15-3
       = f.input :admin_phone, label: 'Phone'
     .col-md-15-3
-      = f.input :legal_name, label: 'Legal Name'
+      = f.input :legal_name, label: 'BA Name'
   .row
     .col-md-15-3.group-label.text-right
       span.field-label
