--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -593,3 +593,5 @@
   </div>
 
 </div>
+
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL-ocE6P0pPmR6Ef4DC2BKqlnlMe1pQFk&amp;libraries=places"></script> -->
