zipcode changed to pincode

--- a/app/views/configurators/angular_views/_add_zone.html
+++ b/app/views/configurators/angular_views/_add_zone.html
@@ -49,7 +49,7 @@
                 </div> -->
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="basic-url" class="leb_color">Zipcode</label>
+                        <label for="basic-url" class="leb_color">Pincode</label>
                         <!-- onKeyPress="if (this.value.length == 6) return false; else setInputFilter(this, function(value) {return /^\d*?\d*$/.test(value);});" -->
                         <input type="text" class="form-control" name="zipcode" required ng-model="zipcode"
                         
