--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -21,7 +21,7 @@
     margin: 15% auto; /* 15% from the top and centered */
   
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 90%; /* Could be more or less, depending on screen size */
   }
   
   /* The Close Button */
@@ -76,11 +76,20 @@
     animation-name: animatetop;
     animation-duration: 0.4s
   }
+  .panic-call {
+    padding: 5px !important;
+  }
+  .pad-2 {
+    padding: 10px 16px;
+  }
+  .panic {
+    background: red !important;
+  }
   
   .vaayu-pop-action-btn{
     border-radius: 4px;
-    border-color: #14a89e;
-    background-color: #14a89e;
+    border-color: #14a89e !important;
+    background-color: #14a89e !important;
     font-family: Roboto;
     font-size: 14px;
     font-weight: normal;
@@ -90,7 +99,7 @@
     line-height: 1.14;
     letter-spacing: normal;
     text-align: left;
-    color: #ffffff;
+    color: #ffffff !important;
   }
   .vaayu-modal-header, .vaayu-modal-body, .vaayu-modal-footer {
     padding: 15px;
