--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -85,7 +85,11 @@
   .panic {
     background: red !important;
   }
-  
+  .stat-item {
+    width:13%;
+    margin: 0 2px;
+    display: inline-block;
+  }
   .vaayu-pop-action-btn{
     border-radius: 4px;
     border-color: #14a89e !important;
