trip_board and route changes

--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -241,7 +241,7 @@
                 <span class="pop-status">{{modelData.tripInfo[0].total_time}} Mins</span>
               </div>
               <div>
-                <span class="pop-name">Duration</span>
+                <span class="pop-name">Distance</span>
                 <span class="pop-status">{{modelData.tripInfo[0].total_distabce}} Kms</span>
               </div>
             </div>
