--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -11,10 +11,11 @@
           </div>
 
           <div class="form-group pr-2">
-            <select id="disabledSelect" class="form-control" ng-model="selectedShift" >
+            <select id="disabledSelect" class="form-control" ng-model="selectedShift">
               <option ng-repeat="shift in shifts" value="{{shift}}">{{shift.name + ' ('+shift.shift_type+')'}}
               </option>
             </select>
+
           </div>
           <!-- <div class="form-group pr-2">
                     <select id="disabledSelect" class="form-control" ng-model="shiftId">
@@ -24,9 +25,10 @@
           <div class="form-group pr-2">
             <div class="form-group pr-2">
               <p class="input-group custom-date date_style">
-                <input type="text" class="form-control data_in_style" datepicker-popup="{{format}}" ng-model="filterDate"
-                  is-open="opened" datepicker-options="dateOptions" date-disabled="disabled(date, mode)"
-                  ng-required="true" close-text="Close" ng-change="updateFilters()" />
+                <input type="text" class="form-control data_in_style" datepicker-popup="{{format}}"
+                  ng-model="filterDate" is-open="opened" datepicker-options="dateOptions"
+                  date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"
+                  ng-change="updateFilters()" />
                 <span class="input-group-btn-datePicket ">
                   <button type="button" class="btn btn-default data_in_style" ng-click="open($event)"><i
                       class="fa fa-calendar"></i></button>
@@ -35,12 +37,14 @@
             </div>
           </div>
 
-          <button type="button" ng-click="generateRoute(siteId, JSON.parse(selectedShift.id) , filterDate, JSON.parse(selectedShift.trip_type))" class="btn btn-terniary-blue">OK</button>
+          <button type="button"
+            ng-click="generateRoute(siteId, JSON.parse(selectedShift.id) , filterDate, JSON.parse(selectedShift.trip_type))"
+            class="btn btn-terniary-blue">OK</button>
         </form>
       </div>
 
       <div class="col-md-3">
-        
+
         <div class="btn-toolbar float-right" role="toolbar">
           <div class="btn-group" role="group">
             <button type="button" ng-click="finalizeRoutes()" class="btn btn-terniary-blue">Finalize</button>
@@ -68,7 +72,7 @@
         <div class="card-analytic kilometers">
           <div class="card-inner-wrapper">
             <div class="text">KILOMETRES</div>
-            <div class="number" >{{roundValue(stats.kilometres)}}</div>
+            <div class="number">{{roundValue(stats.kilometres)}}</div>
           </div>
         </div>
       </div>
@@ -137,17 +141,20 @@
                   <div ng-repeat="containers in model2">
                     <div class="vaayu-dropzone">
                       <!-- | filter :{vehicle_allocated:search} | range : 'empty_seats' : slider_empty.minValue : slider_empty.maxValue | range : 'total_seats' : slider_occupied.minValue : slider_occupied.maxValue -->
-                      <div ng-repeat="container in containers | filter :{vehicle_allocated:search}"
-                        no-drag dnd-callback="container.employees.length" class="employee-cluster-panel">
-                        <div class="employee-cluster-panel-heading" ng-class="container.vehicle_allocated === 'Y'?'allocated_route':'un_allocated_route'">
-                          <div class="title_container" >
+                      <div ng-repeat="container in containers | filter :{vehicle_allocated:search}" no-drag
+                        dnd-callback="container.employees.length" class="employee-cluster-panel">
+                        <div class="employee-cluster-panel-heading"
+                          ng-class="container.vehicle_allocated === 'Y'?'allocated_route':'un_allocated_route'">
+                          <div class="title_container">
                             <input type="checkbox" ng-change="selectRoute(container)" ng-model="container.selected"
-                              name="route" class="tick" style="height: 25px; width: 25px;" ng-show="container.status !== 'assign_requested'">
+                              name="route" class="tick" style="height: 25px; width: 25px;"
+                              ng-show="container.status !== 'assign_requested'">
                             <span class="title_text"># {{container.vehicle_type}} </span>
                           </div>
                         </div>
 
-                        <div class="employee-cluster-panel-body" ng-click='getCurrentVehicleLocation()' style="cursor: pointer">
+                        <div class="employee-cluster-panel-body" ng-click='getCurrentVehicleLocation()'
+                          style="cursor: pointer">
                           <div class="employee-cluster-panel-heading-meta">
                             <div class="employee-cluster-panel-title">
                               <div class="row">
@@ -212,7 +219,8 @@
                             <div class="col-md-6 pad-right-0">
                               <ul class="employee-list-group" dnd-list="container.vehicle"
                                 dnd-drop="dropVehicleCallback(container,index, item, external, type)"
-                                dnd-allowed-types="[container.vehicle_type]" dnd-disable-if="container.vehicle.length >= 1">
+                                dnd-allowed-types="[container.vehicle_type]"
+                                dnd-disable-if="container.vehicle.length >= 1">
                                 <dnd-nodrag>
                                   <li ng-repeat="person in container.vehicle" dnd-type="person.type"
                                     dnd-disable-if="person.type == 'unknown'" dnd-moved="list.vehicle.splice($index, 1)"
@@ -221,7 +229,8 @@
                                     <span class="input-group-addon addon-prepend vehicle_assign">
                                       <div class="inner-addon">
                                         <i class="fa fa-car vehicle_button" style="z-index: 8;"></i>
-                                        <i class="fa fa-times close_button" ng-click="removeVehicle(person, container)"></i>
+                                        <i class="fa fa-times close_button"
+                                          ng-click="removeVehicle(person, container)"></i>
                                       </div>
                                     </span>
 
@@ -437,15 +446,13 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <input type="text" class="form-control" 
-                  ng-model="plateNumber" 
-                  focus-me="focusInput"
-                  placeholder="Search Vehicle Plate Number" ng-change="onVehicleSearch(plateNumber)">
+                  <input type="text" class="form-control" ng-model="plateNumber" focus-me="focusInput"
+                    placeholder="Search Vehicle Plate Number" ng-change="onVehicleSearch(plateNumber)">
                 </div>
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <div class="form-group">
                   <select id="disabledSelect" class="form-control" placeholder="Shift Time">
                     <option>Shift 1</option>
@@ -453,13 +460,15 @@
                     <option>Shift 3</option>
                   </select>
                 </div>
-              </div>
-
+              </div> -->
               <div class="col-md-6">
                 <div class="form-group">
-                  <select id="disabledSelect" class="form-control">
-                    <option>On Duty</option>
-                    <option>Off Duty</option>
+                  <!-- <select id="disabledSelect" class="form-control"  ng-change="onChangeFunc()" ng-model='test_select'>
+                    <option ng-repeat="item in vehicle_status_list" ng-value="item.value">{{item.name}}</option>
+                  </select> -->
+                  <select id="disabledSelect" class="form-control" ng-model="selected_vehicle_status" ng-change="onVehicleStatusChange(selected_vehicle_status)">
+                    <option value="on_duty" >On Duty</option>
+                    <option value="off_duty">Off Duty</option>
                   </select>
                 </div>
               </div>
