Add migration for date

--- a/app/views/sites/_form.html.slim
+++ b/app/views/sites/_form.html.slim
@@ -17,7 +17,7 @@ div#site_html
           .col-md-4.no-margin
             label.site_labels for="site_code"
               | site_code
-            input#site_code[class="form-control" type="text" name="site_code" value=""]
+            input#site_code[class="form-control" type="text" name="site_code" value="" readonly]
           .col-md-4.margin-top
             label.site_labels for="sezNonSez"
               | Sez / Non Sez
@@ -133,7 +133,7 @@ div#site_html
           .col-md-4.no-margin
             label.site_labels for="party_code"
               | Party Code *
-            input#party_code[class="form-control" type="text" name="party_code" value=""]
+            input#party_code[class="form-control" type="text" name="party_code" value="" readonly]
           .col-md-4.no-margin
             label.site_labels for="sap_control_number"
               | SAP Control Number *
