--- a/app/views/trips/index.html.slim
+++ b/app/views/trips/index.html.slim
@@ -10,16 +10,16 @@
           li
             a[href="#operator-trip-board" data-toggle="tab"]
               | Trip Board
-          
           li
             a[href="#employee-change-request" data-toggle="tab"]
               | Requests
           li
-            a[href="#roster-angular" data-toggle="tab"]
+            a[href="#roster-test" data-toggle="tab"]
               | Roster
           li
-            a[href="#routing-angular" data-toggle="tab"]
+            a[href="#routing-testing" data-toggle="tab"]
               | Routing
+
           .nav-actions
             a#export-clusters.hidden.btn.btn-sm.btn-default[type="button"]
               | Export Clusters
@@ -49,7 +49,7 @@
         = render 'trips/operator/assigned_trips'
         = render 'trips/trips_notifications'
         = render 'trips/employer/adhoc_trips'
-        = render 'trips/roster'
+        = render 'trips/rostering'
         = render 'trips/routing'
 
 
