--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -86,6 +86,7 @@
     background: red !important;
   }
   .stat-item {
+    cursor: pointer;
     width:13%;
     margin: 0 2px;
     display: inline-block;
